--- a/package.json
+++ b/package.json
@@ -3,18 +3,40 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "build:dev": "env-cmd config/env.dev.js ./node_modules/.bin/react-scripts build",
+    "server:dev": "env-cmd config/env.dev.js node app.js",
+    "start": "node ./app.js"
   },
   "dependencies": {
+    "bootstrap": "^4.2.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-react-views": "^0.11.0",
     "http-errors": "~1.6.2",
+    "method-override": "^3.0.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.4",
+    "path": "^0.12.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "sequelize-cli": "^5.4.0"
-  }
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.3",
+    "reactstrap": "^7.1.0",
+    "sequelize": "^4.42.0",
+    "sequelize-cli": "^5.4.0",
+    "serve-favicon": "^2.5.0"
+  },
+  "devDependencies": {
+    "eslint": "~5.6.0",
+    "node-dev": "^3.1.3"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "//": "react-scriptsにおいてHTTP HEADERのAcceptがtext/htmlであるリクエストをプロキシするサーバー",
+  "proxy": "http://localhost:3010"
 }
