--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
   "dependencies": {
     "bootstrap": "^4.2.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
+    "debug": "^2.6.9",
+    "dockerode": "^2.5.8",
     "express": "~4.16.0",
     "express-react-views": "^0.11.0",
     "http-errors": "~1.6.2",
+    "jade": "^1.11.0",
     "method-override": "^3.0.0",
-    "morgan": "~1.9.0",
+    "morgan": "^1.9.1",
+    "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
     "path": "^0.12.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "reactstrap": "^7.1.0",
+    "redux": "^4.0.1",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "serve-favicon": "^2.5.0"
