--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "cookie-parser": "~1.4.3",
     "debug": "^2.6.9",
     "dockerode": "^2.5.8",
+    "dotenv": "^6.2.0",
     "express": "~4.16.0",
     "express-react-views": "^0.11.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jade": "^1.11.0",
+    "memory-streams": "^0.1.3",
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
+    "passport": "^0.4.0",
+    "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
