--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "bootstrap-social": "^5.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "^2.6.9",
     "dockerode": "^2.5.8",
@@ -18,6 +19,7 @@
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "jade": "^1.11.0",
+    "lodash": "^4.17.11",
     "memory-streams": "^0.1.3",
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
@@ -29,6 +31,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.1",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "reactstrap": "^7.1.0",
