--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node ./app.js"
   },
   "dependencies": {
-    "bootstrap": "^4.2.1",
+    "app-root-path": "^2.2.1",
+    "bootstrap": "^4.3.1",
     "bootstrap-social": "^5.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "^2.6.9",
@@ -17,9 +18,13 @@
     "express": "~4.16.0",
     "express-react-views": "^0.11.0",
     "express-session": "^1.15.6",
+    "html": "^1.0.0",
     "http-errors": "~1.6.2",
     "jade": "^1.11.0",
-    "lodash": "^4.17.11",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
+    "markdown": "^0.5.0",
+    "marked": "^0.7.0",
     "memory-streams": "^0.1.3",
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
@@ -36,8 +41,8 @@
     "react-scripts": "^2.1.3",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
-    "sequelize": "^5.3.0",
-    "sequelize-cli": "^5.4.0",
+    "sequelize": "^5.15.0",
+    "sequelize-cli": "^5.5.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
