--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build:dev": "env-cmd config/env.dev.js ./node_modules/.bin/react-scripts build",
-    "server:dev": "env-cmd config/env.dev.js node app.js",
+    "build:dev": "./node_modules/.bin/react-scripts build",
+    "server:dev": "node app.js",
     "start": "node ./app.js"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "debug": "^2.6.9",
     "dockerode": "^2.5.8",
     "dotenv": "^6.2.0",
+    "env-cmd": "^10.0.1",
     "express": "~4.16.0",
     "express-react-views": "^0.11.0",
     "express-session": "^1.15.6",
@@ -46,7 +47,6 @@
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "eslint": "~5.6.0",
     "node-dev": "^3.1.3"
   },
   "browserslist": [
